<resources>
    <string name="app_name">ConstraintProgect</string>
    <string name="name">My name is Pushkin</string>
    <string name="yellow_star">Yollow star</string>
    <string name="bio">
        Александр Сергеевич Пушкин родился 6 июня 1799 года
        (по старому стилю 26 мая) в Москве в дворянской помещичьей
        семье (отец его был майор в отставке) в день праздника
        Вознесения. В тот же день у императора Павла родилась внучка,
        в честь которой во всех церквах шли молебны и гудели колокола.
        Так, по случайному совпадению день рождения русского гения был
        ознаменован всеобщим народным ликованием. Символично и место
        рождения поэта г. Москва - самое сердце русской жизни, России.
        Будущего поэта крестили 8 июня в церкви Богоявления в Елохове.
        Отец Пушкина Сергей Львович и мать Надежда Осиповна,
        урожденная Ганнибал, были дальними родственниками. П
        ылкие страсти, руководившие предками как по отцовской,
        так и по материнской линии, оказали свое влияние и на Пушкина.
        Семья (кроме Александра были еще дети Ольга и Лев)
        принадлежала к самой образованной части московского общества.

    </string>
    <string name="what_is_your_nickname">what is your nickname</string>
    <string name="done">Done</string>
</resources>