<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">


        <TextView
            style="@style/NameStyle"
            android:id="@+id/textView"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/LayoutMargin"
            android:layout_width="match_parent"
            android:text="@string/name"
            android:textAlignment="center" />

        <EditText
            style="@style/NameStyle"
            android:ems="10"
            android:hint="@string/what_is_your_nickname"
            android:id="@+id/name_adit"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            android:textAlignment="center" />

        <Button
            android:background="@color/colorAccent"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/button_done"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/LayoutMargin"
            android:layout_width="wrap_content"
            android:text="@string/done"
            app:rippleColor="@color/colorAccent" />


        <TextView
            style="@style/NameStyle"
            android:id="@+id/textViewNickName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="TextView"
            android:visibility="invisible" />

        <ImageView
            android:contentDescription="@string/yellow_star"
            android:id="@+id/imageView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_height="match_parent"
            android:layout_width="match_parent">


            <TextView
                style="@style/NameStyle"
                android:id="@+id/bio_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/bio" />


        </ScrollView>
    </LinearLayout>
</layout>
